--- a/index.html
+++ b/index.html
@@ -343,12 +343,12 @@
             <div class="container">
                 <div class="row border-top border-bottom border-light py-5">
                     <div
-                        class="col-md-6 text-center text-md-start mb-4 mb-md-0"
+                        class="col-sm-6 text-center text-md-start mb-4 mb-md-0"
                     >
                         <img
                             src="images/redLogo.png"
                             alt="logo"
-                            class="rounded-circle mb-5"
+                            class="rounded-circle mb-4 mb-sm-5"
                         />
                         <div class="address fw-bold">
                             <p>〒XXX-XXXX</p>
@@ -357,12 +357,12 @@
                         </div>
                     </div>
 
-                    <div class="col-md-6">
+                    <div class="menu col-sm-6">
                         <div class="row text-center text-md-start">
-                            <div class="col-6 col-md-3 mb-3">
+                            <div class="col-6 col-sm-3 mb-1 mb-sm-3">
                                 <h5 class="fw-bold"><a href="#top">TOP</a></h5>
                             </div>
-                            <div class="col-6 col-md-3 mb-3">
+                            <div class="col-6 col-sm-3 mb-1 mb-sm-3">
                                 <h5 class="fw-bold">
                                     <a href="#about">ABOUT</a>
                                 </h5>
@@ -373,10 +373,10 @@
                                     <li>xxxxxxxxxxx</li>
                                 </ul>
                             </div>
-                            <div class="col-6 col-md-3 mb-3">
+                            <div class="col-6 col-sm-3 mb-1 mb-sm-3">
                                 <h5 class="fw-bold"><a href="#map">MAP</a></h5>
                             </div>
-                            <div class="col-6 col-md-3 mb-3">
+                            <div class="col-6 col-sm-3 mb-1 mb-sm-3">
                                 <h5 class="fw-bold">
                                     <a href="#gallery">GALLERY</a>
                                 </h5>
@@ -385,7 +385,7 @@
                                     <li>xxxxxxxxxxx</li>
                                 </ul>
                             </div>
-                            <div class="col-6 col-md-3 mb-3">
+                            <div class="col-6 col-sm-3 mb-1 mb-sm-3">
                                 <h5 class="fw-bold">
                                     <a href="#contact">CONTACT</a>
                                 </h5>
@@ -399,7 +399,7 @@
                     </div>
                 </div>
 
-                <div class="text-center pt-4 small">
+                <div class="text-center pt-3 pt-sm-4 small">
                     &copy; 2025 BLAZE_BASKETBALL_SCHOOL. All rights reserved.
                     Images from
                     <a
