--- a/index.html
+++ b/index.html
@@ -255,9 +255,19 @@
                         <img
                             src="https://placehold.co/500x350"
                             alt="placehold"
-                            class="col-6 col-lg-4"
+                            class="col-12 col-lg-4"
                         />
                         <img
+                            src="https://placehold.co/500x350"
+                            alt="placehold"
+                            class="col-12 col-lg-4"
+                        />
+                        <img
+                            src="https://placehold.co/500x350"
+                            alt="placehold"
+                            class="col-12 col-lg-4"
+                        />
+                        <!-- <img
                             src="https://placehold.co/500x350"
                             alt="placehold"
                             class="col-6 col-lg-4"
@@ -271,17 +281,7 @@
                             src="https://placehold.co/500x350"
                             alt="placehold"
                             class="col-6 col-lg-4"
-                        />
-                        <img
-                            src="https://placehold.co/500x350"
-                            alt="placehold"
-                            class="col-6 col-lg-4"
-                        />
-                        <img
-                            src="https://placehold.co/500x350"
-                            alt="placehold"
-                            class="col-6 col-lg-4"
-                        />
+                        /> -->
                     </div>
                 </div>
                 <button class="more mt-5 fs-2 fw-bold rounded-pill">
