--- a/gallery.html
+++ b/gallery.html
@@ -76,6 +76,36 @@
                         alt="ギャラリー画像6"
                     />
                 </div>
+                <div class="col-6 col-md-4">
+                    <img
+                        src="https://placehold.co/600x400"
+                        alt="ギャラリー画像4"
+                    />
+                </div>
+                <div class="col-6 col-md-4">
+                    <img
+                        src="https://placehold.co/600x400"
+                        alt="ギャラリー画像5"
+                    />
+                </div>
+                <div class="col-6 col-md-4">
+                    <img
+                        src="https://placehold.co/600x400"
+                        alt="ギャラリー画像6"
+                    />
+                </div>
+                <div class="col-6 col-md-4">
+                    <img
+                        src="https://placehold.co/600x400"
+                        alt="ギャラリー画像4"
+                    />
+                </div>
+                <div class="col-6 col-md-4">
+                    <img
+                        src="https://placehold.co/600x400"
+                        alt="ギャラリー画像5"
+                    />
+                </div>
             </div>
         </section>
     </body>
